[package]
name = "cosmos"
version = "0.1.0"
authors = ["mabysh <max.byshnev@protonmail.com>"]

[dependencies]
nonblock = { version = "0.1.0", path = "../nonblock-rs" }
tokio = { version = "0.1.5",  path = "tokio" }
tokio-threadpool = { version = "0.1.2", path = "tokio/tokio-threadpool" }
termion = "*"
tui = "*"
env_logger = "*"
log = "*"

[patch.crates-io]
tokio = { path = "tokio" }
tokio-threadpool = { path = "tokio/tokio-threadpool" }
nonblock = { path = "../nonblock-rs" }
