[package]
name = "cosmos"
version = "0.1.0"
authors = ["mabysh <max.byshnev@protonmail.com>"]

[dependencies]
nonblock = { version = "0.1.0", path = "../nonblock-rs" }
tokio = "*"
tokio-threadpool = "*"
termion = "*"
tui = "*"
log4rs = "*"
log = "*"

[patch.crates-io]
nonblock = { path = "../nonblock-rs" }
